This page has all the up to date injuries in the NFL, all in order from team name A-Z.

--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,320 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="background-color: rgb(0, 2, 55)">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="styleSheet.css">
 </head>
-<body>
+<body link="white">
+
+<div id="header">
+    <h1>NFL</h1>
+</div>
+
+<div id="nav">
+    <ul>
+    <li><a href="index.html"> Stats </a></li>
+    <li>Injuries</li>
+    <li><a href="index3.html"> News</a></li>
+    </ul>
+</div>
+
+<div id="section">
+    <h2>League Injuries</h2>
+    <h3>Arizona Cardinals</h3>
+    <p>
+        Alek Okafor, LB, out
+    </p>
+    <p>
+        Andre Ellington, RB, probable
+    </p>
+    <h3>Atlanta Falcons</h3>
+    <p>
+        Julio Jones, WR, questionable
+    </p>
+    <p>
+        Leonard Hankerson, WR, questionable
+    </p>
+    <p>
+        Devonta Freeman, RB, questionable
+    </p>
+    <h3>Baltimore Ravens</h3>
+    <p>
+        Lardarius Webb, CB, questionable
+    </p>
+    <p>
+        Wil Davis, CB, injury reserve
+    </p>
+    <p>
+        Justin Forsett, RB, questionable
+    </p>
+    <p>
+        Steve Smith Sr., WR, out
+    </p>
+    <h3>Buffalo Bills</h3>
+    <p>
+        Tyrod Taylor, QB, questionable
+    </p>
+    <p>
+        Cierre Wood, RB, injury reserve
+    </p>
+    <p>
+        Charles Clay, TE, probable
+    </p>
+    <p>
+        Chirs Hogan, WR, probable
+    </p>
+    <h3>Carolina Panthers</h3>
+    <p>
+        Luke Kuechly, LB, probable
+    </p>
+    <p>
+        Jerricho Cotchery, WR, questionable
+    </p>
+    <h3>Chicago Bears</h3>
+    <p>
+        Antone Smith, RB, questionable
+    </p>
+    <p>
+        Jacquizz Rodgers, RB, injury reserve
+    </p>
+    <p>
+        Shea McClellin, LB, questionable
+    </p>
+    <h3>Cincinnati Bengals</h3>
+    <p>
+        Jeremy Hill, RB, probable
+    </p>
+    <p>
+        Adam Jones, CB, probable
+    </p>
+    <p>
+        George Iloka, SS, probable
+    </p>
+    <h3>Cleveland Browns</h3>
+    <p>
+        Joe Haden, CB, doubtful
+    </p>
+    <p>
+        Josh McCown, QB, questionable
+    </p>
+    <p>
+        Duke Johnson Jr, RB, probable
+    </p>
+    <h3>Dallas Cowboys</h3>
+    <p>
+        Sean Lee, LB, probable
+    </p>
+    <p>
+        Lance Dunbar, RB, injury reserve
+    </p>
+    <p>
+        Dez Bryant, WR, out
+    </p>
+    <h3>Denver Broncos</h3>
+    <p>
+        DeMarcus Ware, DE, doubtful
+    </p>
+    <p>
+        Owen Daniels, TE, probable
+    </p>
+    <p>
+        Demaryius Thomas, WR, probable
+    </p>
+    <p>
+        Peyton Manning, QB, probable
+    </p>
+    <h3>Detroit Lions</h3>
+    <p>
+        Joique Bell, RB, out
+    </p>
+    <p>
+        Lance Moore, WR, probable
+    </p>
+    <p>
+        DeAndre Levy, LB, questionable
+    </p>
+    <h3>Green Bay Packers</h3>
+    <p>
+        B.J. Raji, DE, questionable
+    </p>
+    <p>
+        Clay Matthews, LB, probable
+    </p>
+    <p>
+        James Jones, WR, probable
+    </p>
+    <h3>Houston Texans</h3>
+    <p>
+        Jaelen Strong, WR, questionable
+    </p>
+    <p>
+        Jonathan Grimes, RB, out
+    </p>
+    <p>
+        Alfred Blue, RB, questionable
+    </p>
+    <p>
+        Jadeveon Clowney, LB, questionable
+    </p>
+    <h3>Indianapolis Colts</h3>
+    <p>
+        Matt Hasselbeck, QB, probable
+    </p>
+    <p>
+        Andrew Luck, QB, out
+    </p>
+    <h3>Kansas City Chiefs</h3>
+    <p>
+        Jamaal Charles, RB, out
+    </p>
+    <p> Travis Kelce, TE, probable</p>
+    <h3>Miami Dolphins</h3>
+    <p>
+        Brent Grimes, CB, questionable
+    </p>
+    <h3>Minnesota Vikings</h3>
+    <p>
+        Mike Wallace, WR, questionable
+    </p>
+    <p>
+        Charles Johnson, WR, questionable
+    </p>
+    <h3>New England Patriots</h3>
+    <p>
+        Brandon LaFell, WR, out
+    </p>
+    <p>
+        Dont'a Hightower, LB, probable
+    </p>
+    <p>
+        Aaron Dobson, WR, day to day
+    </p>
+    <p>
+        Bradley Fletcher, CB, questionable
+    </p>
+    <h3>New Orleans Saints</h3>
+    <p>
+        Marques Colston, WR, doubtful
+    </p>
+    <p>
+        Brandin Cooks, WR, probable
+    </p>
+    <h3>New York Giants</h3>
+    <p>
+        Daniel Fells, TE, injury reserve
+    </p>
+    <p>
+        Ruben Randle, WR, questionable
+    </p>
+    <p>Odell Beckham Jr., WR, questionable</p>
+    <p>
+        John Beason, LB, questionable
+    </p>
+    <p>
+        Devon Kennard, LB, out
+    </p>
+    <h3>New York Jets</h3>
+    <p>
+        Bilal Powell, RB, questionable
+    </p>
+    <h3>Oakland Raiders</h3>
+    <p>
+        Michael Crabtree, WR, probable
+    </p>
+    <p>
+        Latavius Murray, RB, probable
+    </p>
+    <p>
+        Taiwan Jones, RB, out
+    </p>
+    <h3>Philadelphia Eagles</h3>
+    <p>
+        Mychal Kendricks, LB, out
+    </p>
+    <p>
+        Byron Maxwell, DB, probable
+    </p>
+    <p>
+        Kenjon Barner, RB, day to day
+    </p>
+    <h3>Pittsburgh Steelers</h3>
+    <p>
+        Will Allen, SS, questionable
+    </p>
+    <p>
+        Matt Spaeth, TE, probable
+    </p>
+    <p>
+        Cortez Allen, CB, day to day
+    </p>
+    <p>
+        Markus Wheaton, WR, probable
+    </p>
+    <p>
+        Martavius Bryant, WR, out
+    </p>
+    <h3>San Diego Chargers</h3>
+    <p>
+        Brandon Flowers, CB, probable
+    </p>
+    <p>
+        Jacoby Jones, WR, probable
+    </p>
+    <p>
+        Malcolm Floyd, WR, probable
+    </p>
+    <h3>San Francisco 49ers</h3>
+    <p>
+        Reggie Bush, RB, questionable
+    </p>
+    <p>
+        Vernon Davis, TE, out
+    </p>
+    <p>
+        NaVarro Bowman, LB, probable
+    </p>
+    <h3>Seattle Seahawks</h3>
+    <p>
+        Marshawn Lynch, RB, out
+    </p>
+    <h3>St. Louis Rams</h3>
+    <p>
+        Kenny Britt, WR, probable
+    </p>
+    <h3>Tampa Bay Buccaneers</h3>
+    <p>
+        Chris Conte, DB, questionable
+    </p>
+    <p>
+        Major Wright, SS, probable
+    </p>
+    <p>
+        Austin Seferian-Jenkins, TE, day to day
+    </p>
+    <p>
+        Gerald McCoy, DT, probable
+    </p>
+    <h3>Tennessee Titans</h3>
+    <p>
+        Jason McCourty, CB, probable
+    </p>
+    <h3>Washington Redskins</h3>
+    <p>
+        Jordan Reed, TE, questionable
+    </p>
+    <p>
+        Matt Jones, RB, questionable
+    </p>
+    <p>
+        Pierre Garcon, WR, probable
+    </p>
+    <p>
+        Perry Riley Jr., LB, probable
+    </p>
+</div>
+
+<div id="footer">
+    Copyright &copy; Zachary Kurtz
+</div>
 
 </body>
 </html>
