This page has news around the NFL.

--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,236 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="background-color: rgb(0, 2, 55)">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="styleSheet.css">
 </head>
-<body>
+<body link="white">
+
+<div id="header">
+    <h1>NFL</h1>
+</div>
+
+<div id="nav">
+    <ul>
+    <li><a href="index.html"> Stats</a></li>
+    <li><a href="index2.html"> Injuries</a></li>
+   <li> News</li>
+    </ul>
+</div>
+
+<div id="section">
+    <h2>News Around League</h2>
+    <h3>Tyrod Taylor out with MCL injury; Bills to start Manuel</h3>
+    <p>
+        The Bills will be going into another week of football without one of their offensive stars.
+
+        Quarterback Tyrod Taylor suffered an MCL injury last week and will be kept out of Sunday's game against the Bengals,
+        a source familiar with the injury tells NFL Media. Taylor will be re-evaluated next week, but he will not be able to play by Sunday.
+
+        The Bills plan to start EJ Manuel in Taylor's place. Buffalo also signed quarterback Josh Johnson on Tuesday as insurance.
+
+
+        Watch with the world as the Buffalo Bills take on the Jacksonville Jaguars in the first ever free global NFL live stream
+        on October 25 at 9.30 a.m. ET. The game is available across Yahoo on your phone, tablet, laptop, console or connected TV. For free!
+        Taylor's injury occurred during the Bills' 14-13 win over the Titans in which Taylor threw for just 109 yards, but ran for 76
+        yards and was responsible for two touchdowns.
+
+        The Bills' quarterback dilemma dominated headlines in the offseason as Taylor, Manuel and Matt Cassel all battled it out for the
+        starting job. Though the three quarterbacks were all considered to be mediocre options at first, Taylor quickly pulled ahead and earned the job in the final weeks of the preseason. Buffalo later traded Cassel for draft picks, who is now rumored to be a viable backup for the Cowboys.
+
+        This news adds insult to injury as the Buffalo offense hasn't had a healthy starting lineup since the first two weeks of the
+        season. Offseason acquisitions LeSean McCoy and Percy Harvin have struggled to reach the field with hamstring and hip injuries, respectively; wide receiver Sammy Watkins has missed the last two games with a calf injury; and standout running back Karlos Williams sat out last week's win with a concussion.
+
+        Rex Ryan can't seem to catch a break. Going into another important matchup against a highly-touted AFC foe, his offense is
+        undermanned and potentially unfit to play up to the caliber of the opponent. Manuel has played meaningful games for the Bills before, but never under Greg Roman's offense, which has turned Taylor into a household name and has earned him comparisons to other elusive quarterbacks.
+
+        Against a Bengals front that has frustrated Russell Wilson, Joe Flacco and Philip Rivers already this year, Manuel and the Bills will need to establish the run early and grind some clock, or else they will be in for one rough afternoon at home..
+    </p>
+    <h3>Terrell Owens: I could absolutely help Eagles right now</h3>
+    <p>
+        Terrell Owens' "A Football Life" aired Friday night on NFL Network.
+
+        While promoting the in-depth look at his life this week, T.O. hopped on Philadelphia radio. Of course, with the Eagles' current struggles the former receiver -- who helped carry Philly to a Super Bowl appearance -- was asked if he could help if signed, even at 41 years old.
+
+        "Absolutely, yes," Owens told the 94WIP Mike & Ike Show on Friday, via CBS Philly. "No question, no question about that, sir."
+
+        Remember when Randy Moss said earlier this season he could still play? Owens is just riding that wishing star.
+
+        "You think that I shouldn't be playing right now?" Owens said. "I definitely could be playing right now, but based on my character -- yeah, people can say, 'Oh, he's 41.'
+
+        "But I'm not your average 41-year-old ... And when I was on that football field, I felt like I was the best thing out there and it was due to how hungry I was and how dedicated I was."
+
+        Let's not even bother unpacking this moonshot idea.
+
+        In reality, the only reason I wrote this was to point out how ridiculously awesome the T.O. "A Football Life" was.
+    </p>
+    <h3>Niners grant Shareece Wright's wish to be released</h3>
+    <p>
+        Shareece Wright wanted out of San Francisco. He got his wish Saturday.
+
+        The 49ers announced they released the cornerback and signed guard Andrew Tiller from the practice squad.
+
+        NFL Media Insider Ian Rapoport reported early last week that Wright was seeking a trade or release. A dozen days later, the Niners granted his request.
+
+        Wright thanked the Niners on Twitter for his release.
+
+        Wright signed a one-year, $3 million deal in March after making 27 starts over the past four seasons with the San Diego Chargers. The 28-year-old defensive back was not active in any of the Niners' four games this season.
+
+        With a faltering remade offensive line, Tiller (6-foot-4, 324) will provide depth. He appeared in one game in 2014. Tiller reportedly took some first-team reps at right guard this week.
+    </p>
+    <h3>NFL: There was clock error at end of Chargers game</h3>
+    <p>
+        The Steelers scored the game-winning touchdown as time expired
+        on Monday night against the Chargers. The NFL acknowledged Tuesday that game officials failed to correct a significant clock error that preceded Pittsburgh's final march.
+
+        NFL spokesman Michael Signora delivered an explanation from
+        the league to NFL Media Insider Ian Rapoport. The statement, in full:
+
+        "With 2:56 remaining in the fourth quarter, San Diego kicked
+        off to Pittsburgh. The kick resulted in a touchback. By rule, the game clock does not start if the receiving team possesses the ball in the end zone and does not carry it into the field of play.
+
+        Every game, all season
+
+        "Because of an error by the clock operator,
+        the game clock was incorrectly started before the Steelers' first play from scrimmage following the touchback. That first down
+        snap came with 2:38 left to play instead of 2:56, a difference of 18 seconds.
+
+        "The official game time is kept on the stadium
+        scoreboard, but it is the responsibility of the side judge to supervise the timing of the game. Had the side judge or
+        any of the other six on-field officials noticed the timing error, they could have corrected it.
+
+        "The game clock is not subject to instant replay
+        review unless there is a timing issue on the last play of the first half or the last play of the game.
+        The performance of the clock operator and game officials will be reviewed per the standard procedure for reviewing every play of every game."
+
+        NFL clock operators are hired by the league and
+        usually have college football officiating experience. Clock operators typically live in
+        close geographic proximity to the stadium where they are working, though the league uses operators from outside the region of the home team's stadium during the postseason.
+
+        The Steelers, and specifically Le'Veon Bell, saved the NFL from a
+        splitting headache by inching past the goal line on the game's final play. Don't be
+        surprised if the circumstances of Monday night come up when the league's competition committee reconvenes in a few months
+    </p>
+    <h3>Martin proving to be Winston's best friend on field</h3>
+    <p>
+        The Tampa Bay Buccaneers found the recipe for offensive success in 2015: ride Doug Martin.
+
+        The diminutive bulldozer was spectacular in Sunday's 38-31 victory over the Jacksonville Jaguars.
+
+        "They had eight men in the box. We're running it. They know it, and then you can still run it,"
+        Lovie Smith said, via ESPN.com. "Yes, that just sets up everything else. And of course, the running game is the quarterback's best friend. ... We were able to get all of that going yesterday."
+
+        His stat line was ridiculous: 24 carries, 123 rushing yards, 2 rush TD; 3 receptions, 35 receiving yards, 1 receiving TD; 158 total scrimmage yards.
+
+        Some of the runs were even more absurdly awesome than the stats show. Exhibit A:
+
+
+        Hello, juke button, how have you been?
+
+        Martin took advantage of a banged up Jacksonville defense without leading tackler Paul Posluszny, but his performance Sunday wasn't an aberration.
+
+        The tailback has put up back-to-back 100-plus yard games, averaging 5.2 yards per carry on 20-plus attempts per game in those contests.
+
+
+        On Sunday, the Bucs' beleaguered offensive line was able to create space for Martin to scamper, but even when
+        he's had to do it on his own behind a sieve line, the fourth-year back has been marvelous this season.
+
+        The Bucs didn't pick up the fifth year of the former first-round pick's contract in hopes it would spark a fire.
+        Martin responded by running like he is being chased by flames.
+
+        His game film shows a slimmed-down runner that has his quick cut and burst back. Martin is blowing through arm
+        tackles and making second-level defenders look silly with his combination of elusiveness and strength.
+
+
+        Martin's 405 rushing yards puts him in a three-way for second in the NFL. Pro Football Focus charted him with 24
+        total broken tackles, fourth most among running backs this season. He also has six runs of 15-plus yards this season.
+
+        With rookie Jameis Winston under center, the Bucs need to lean on Martin heavily as a mechanism to allow the young
+        quarterback to progress without the weight of carrying an offense. The offensive line might not open as many holes every week as it did Sunday,
+        but cutting Martin loose, even against stout fronts, is the best way for Lovie Smith's team to take a step forward in 2015.
+    </p>
+    <h3>Panthers LB Luke Kuechly out of concussion protocol</h3>
+    <p>
+        Carolina Panthers linebacker Luke Kuechly is on his way back to the field after missing three games with a concussion.
+
+        The first-team All-Pro linebacker is out of concussion protocol and returned to the practice field on Tuesday.
+
+        NFL Media's Rand Getlin reported Kuechly is "feeling great" and the plan is for him to play this weekend at Seattle.
+
+        Every game, all season
+
+        The Charlotte Observer first reported the news.
+
+        Kuechly has played just less than two quarters this season, during which
+        he still compiled seven tackles and a sack (!). Getting the tackling maven back on the field will be a huge boon for the Panthers.
+
+        Despite their 4-0 start, Carolina has struggled at times to slow offenses.
+        With a mediocre pass rush, opposing offenses were able to exploit the middle of the field at times with Kuechly out -- the Panthers allowed Luke McCown to complete 81.6 percent of his passes in Week 3.
+
+        Carolina's schedule ramps up this week after a creampuff start to the season.
+        The Panthers travel to Seattle to face a disgruntled Seahawks team before back-to-back prime-time games against the Eagles and Colts, then they host the Packers.
+
+        Kuechly's return is much needed as the Panthers attempt to keep pace with the
+        high-flying Atlanta Falcons (5-0) and win their third straight NFC South title.
+    </p>
+    <h3>Bengals players: 5-0 start means nothing</h3>
+    <p>
+        The Cincinnati Bengals are 5-0 following Sunday's dramatic, Earth-aided, overtime victory over the Seattle Seahawks.
+        Bengals players, however, are downplaying the achievement.
+
+        "It does not mean nothing," Carlos Dunlap said, via the Cincinnati Enquirer. "We've got to win our next football game.
+        I don't care what our record is right now. We've got another opponent coming up and they're just as important. No matter where we are right now, if we don't finish, the start won't be remembered. We'll be remembered how we wouldn't finish."
+
+
+        There are six undefeated teams through Week 5.
+        The Bengals, Atlanta Falcons, Denver Broncos and Green Bay Packers are all 5-0, with the Carolina Panthers and New England Patriots 4-0.
+        The most 5-0 teams in a single season in NFL history is five (2009), which we could surpass next week.
+
+        The Bengals became the first AFC North team to start 5-0 since realignment in 2002.
+        The last time Cincinnati started 5-0 was 1988, their most recent trip to the Super Bowl.
+
+        "I was born in '87, so trying to get 6-0," defensive end Michael Johnson said dismissing the start. "Trying to get to 6-0 and we'll go from there."
+
+        Linebacker A.J. Hawk has been part of this sort of talk before, after spending nine-seasons with the perennial-winning Green Bay Packers.
+
+        "That's the thing, there's nothing really to talk about," Hawk said. "It's cliché.
+        Yeah it sucks because you feel like you're giving a stock answer when you say 'we're on to the next one' but it's true. We're not having any parties for ourselves.
+        We're not celebrating too much."
+
+        The Bengals have jumped out to a two-game lead in the division and are headed toward a
+        fifth-straight playoff spot. They've won regular season games before. Until they win in the playoffs, no early season success will matter. Even if they've been fantastic in 2015.
+    </p>
+    <h3>Antonio Gates goes bonkers in return from suspension</h3>
+    <p>
+        San Diego Chargers tight end Antonio Gates returned from his four-game suspension in Monday night's 24-20 loss to the Pittsburgh Steelers. He immediately fell back into his role as Philip Rivers' go-to target.
+
+        Gates' presence was felt from the jump, as Rivers hit his long-time target with the first pass of the game. Gates snagged three passes on the first drive, including the opening touchdown, the 100th of his career.
+
+        Every game, all season
+
+        "He started off hot and kept it rolling,
+        " Rivers said of the tight end, to whom he's thrown 74 TDs. "He was a big contributor."
+
+        Gates finished with nine catches on 11 targets for
+        92 yards and two touchdowns, all team highs. Those numbers came despite playing just 56.6 percent of the snaps.
+
+        "I've never had any expectations in terms of what I
+        was going to do going into the game," Gates said, via the San Diego Union-Tribune. "All I wanted to do was contribute and I was able to do as
+        much as I could when the opportunities presented themselves."
+
+        Gates, 35, became just the second tight end in NFL
+        history -- and the ninth overall -- to catch more than 100 touchdown passes (Tony Gonzalez, 111). The 74 touchdowns places Gates/Rivers as the
+        fifth-most prolific scoring duo in NFL history. Gates also passed Shannon Sharpe for third all-time in tight end receiving yards (Gonzalez, Jason Witten).
+
+        Down a receiving target and with a crumbling offensive line,
+        Rivers relied on his long-time partner as a security blanket in big spots. They couldn't combine for the win, but there is no doubt with Gates
+        back on the field, the Chargers' offense just got more dangerous.
+    </p>
+</div>
+
+
+<div id="footer">
+    Copyright &copy; Zachary Kurtz
+</div>
 
 </body>
 </html>
